Add ExpandVolume to API routes
