# internal/windows/swaggerui/swagger.json
@@ -5,7 +5,7 @@
     },
     "paths": {
         "/attachment/{nodeid}/volume/{volid}": {
-            "post": {
+            "put": {
                 "description": "Attaches a volume to a node",
                 "consumes": [
                     "application/json"
@@ -41,8 +41,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "204": {
+                        "description": "No Content"
                     },
                     "403": {
                         "description": "Access denied",
@@ -94,8 +94,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "204": {
+                        "description": "No Content"
                     },
                     "403": {
                         "description": "Access denied",
@@ -269,6 +269,80 @@
             }
         },
         "/volume/{id}": {
+            "put": {
+                "description": "Expand a VHD",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Disks"
+                ],
+                "summary": "Expand a VHD",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "API Key",
+                        "name": "X-Api-Key",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Volume size",
+                        "name": "size",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Volume id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/rest.ExpandVolumeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid arguments",
+                        "schema": {
+                            "$ref": "#/definitions/rest.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "Access denied",
+                        "schema": {
+                            "$ref": "#/definitions/rest.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "schema": {
+                            "$ref": "#/definitions/rest.Error"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/rest.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/rest.Error"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "Delete a VHD",
                 "consumes": [
@@ -298,8 +372,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "204": {
+                        "description": "No Content"
                     },
                     "400": {
                         "description": "Invalid arguments",
@@ -352,8 +426,8 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/rest.GetVolumeResponse"
                         }
@@ -558,6 +632,17 @@
                 "message": {
                     "description": "Error message",
                     "type": "string"
+                }
+            }
+        },
+        "rest.ExpandVolumeResponse": {
+            "type": "object",
+            "properties": {
+                "capacityBytes": {
+                    "type": "integer"
+                },
+                "nodeExpansionRequired": {
+                    "type": "boolean"
                 }
             }
         },
